# Nedwons

./: .gitignore  .gitleaks.toml  ABUSE_MODEL.md  ARCHITECTURE.md  CRYPTOGRAPHY.md  DATA_RETENTION.md  PERFORMANCE.md  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  RISK_REGISTER.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml
apps/ios/: README.md
apps/ios/Nedwons/: Info-additions.plist  Nedwons.entitlements  NedwonsApp.swift  project.yml
apps/ios/Nedwons/NotificationService/: Info.plist  NotificationService.swift
apps/ios/Nedwons/Sources/: NedwonsApp.swift  NedwonsDemoApp.swift  SecretDemoView.swift
apps/ios/NedwonsApp/: Package.swift
apps/ios/NedwonsApp/Sources/NedwonsAppKit/: ConversationCoordinator.swift  MlsClientSecretEngine.swift  SelfGroupLinker.swift
apps/ios/NedwonsApp/Sources/NedwonsPush/: PushInboxDecoder.swift
apps/ios/NedwonsApp/Sources/SelfGroupLiveRun/: main.swift
apps/ios/NedwonsApp/Tests/NedwonsAppKitTests/: PushInboxDecoderTests.swift  SecretMessageViewModelRealCoreTests.swift
apps/ios/NedwonsKit/: Package.swift
apps/ios/NedwonsKit/Sources/InteropEmit/: main.swift
apps/ios/NedwonsKit/Sources/NedwonsKit/: AppAttest.swift  AtRestKey.swift  AuthTranscript.swift  ClientTranscripts.swift  ContactAlias.swift  DeviceIdentity.swift  DeviceSigner.swift  KeychainStore.swift  Membership.swift  NedwonsClient.swift  RequestProof.swift  SenderCertificate.swift  SessionStore.swift  Transparency.swift
apps/ios/NedwonsKit/Sources/NedwonsSmoke/: Smoke.swift
apps/ios/NedwonsKit/Sources/NedwonsUI/: AppConfig.swift  AppModel.swift  AppScreens.swift  AppShell.swift  AuthScreens.swift  ChatsScreens.swift  Components.swift  ConversationView.swift  DesignTokens.swift  PlatformModifiers.swift  SecretMessage.swift  SecretMessageViews.swift  SocialScreens.swift
apps/ios/NedwonsKit/Tests/NedwonsKitTests/: AppAttestTests.swift  AtRestKeyTests.swift  AuthTranscriptTests.swift  ClientTranscriptsTests.swift  DeliveryAccessKeyTests.swift  DeviceIdentityTests.swift  KeyTransparencyAuditTests.swift  MembershipTests.swift  NedwonsClientTests.swift  RequestProofTests.swift  SealedSenderPolicyTests.swift  SenderCertificateTests.swift  TransparencyTests.swift
apps/ios/NedwonsKit/Tests/NedwonsUITests/: AliasAndChatsTests.swift  AppConfigTests.swift  AppLaunchTests.swift  DeviceAuditBannerTests.swift  SecretMessageViewModelTests.swift
apps/ios/NedwonsMLS/: Package.swift  README.md
apps/ios/NedwonsMLS/Sources/MlsFfi/: mls_ffi.swift
apps/ios/Sentinel/: Info-additions.plist  PrivacyInfo.xcprivacy  Sentinel.entitlements  SentinelApp.swift  project.yml
apps/ios/Sentinel/NotificationService/: Info.plist  NotificationService.swift
apps/ios/Sentinel/Sources/: SecretDemoView.swift  SentinelDemoApp.swift
apps/ios/SentinelApp/: Package.swift
apps/ios/SentinelKit/: Package.swift
apps/ios/SentinelMLS/: Package.swift  README.md
contracts/: API.md  security.txt
contracts/test-vectors/: README.md  auth-transcript-login.hex  membership-manifest-add.hex
core/mls-core/: Cargo.toml
core/mls-core/src/: client.rs  content.rs  durable.rs  envelope.rs  lib.rs  secret.rs
core/mls-core/tests/: client_api.rs  durable.rs  e2ee.rs  file_journal.rs  membership_check.rs  secret.rs
core/mls-ffi/: Cargo.toml
core/mls-ffi/fuzz/: Cargo.toml  README.md
core/mls-ffi/fuzz/fuzz_targets/: content_decode.rs  envelope.rs  secret_state.rs
core/mls-ffi/src/: lib.rs
core/mls-ffi/tests/: adversarial.rs  client.rs  secret.rs
docs/: APP_ATTEST.md  DEPENDENCY_AUDIT.md  DEVICE_LINKING.md  FFI_BRIDGE.md  GATE0_VERIFICATION.md  GATE1_DEVICE_CHECKLIST.md  HOSTING.md  KEY_TRANSPARENCY.md  MILESTONE_LEDGER.md  NOTIFICATION_EXTENSION.md  PUSH_NOTIFICATIONS.md  SECRET_MESSAGES.md  SECURITY_AUDIT_EXCEPTIONS.md
docs/adr/: 0001-messaging-protocol.md  0002-device-binding.md  0003-recovery-model.md  0004-backend-language.md  0005-apple-only-scope.md  0006-storage-seam.md  0007-uniffi-mls-binding.md  0008-multi-device-trust-model.md  0009-group-membership-model.md  0010-mls-authoritative-membership.md  0011-sender-constrained-access-tokens.md  0012-sealed-sender.md  0013-transparency-lifecycle-log.md  0014-sealed-sender-delivery-tokens.md  0015-secret-message-multidevice.md  0016-post-quantum-hybrid-ciphersuite.md
infra/: README.md  docker-compose.yml
scripts/: build_mls_ffi.sh  gen_server_keys.sh  generate_sbom.sh  run_app_sim.sh  self_group_live_run.sh  swift_backend_smoke.sh  test_mls_sim.sh
services/: .dockerignore  .env.example  Cargo.toml
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: V10__membership_commits.sql  V11__membership_actor_account.sql  V12__mls_authoritative.sql  V13__multi_device.sql  V14__recovery_secret.sql  V15__recovery_lockout.sql  V16__delivery_access_keys.sql  V17__sealed_envelopes.sql  V18__self_group.sql  V19__device_push_tokens.sql  V1__init.sql  V20__app_attest.sql  V2__relay.sql  V3__envelope_idempotency.sql  V4__social.sql  V5__blocks.sql  V6__reports.sql  V7__group_roles_invites.sql  V8__transparency_log.sql  V9__envelopes_created_at.sql
services/api/src/: attest.rs  breach_http.rs  groups.rs  http.rs  lib.rs  main.rs  membership.rs  notify.rs  pgstore.rs  proof.rs  push.rs  relay.rs  social.rs  transparency.rs
services/api/tests/: apns_transport.rs  app_attest.rs  attest_verify.rs  delivery_key.rs  devices.rs  dpop.rs  groups.rs  http_api.rs  load.rs  membership_sim.rs  pg_invariants.rs  push.rs  recovery.rs  relay_e2ee.rs  retention.rs  sealed_delivery.rs  self_group.rs  social.rs  transparency.rs  ws_stream.rs
services/api/tests/common/: mod.rs
services/auth-core/: Cargo.toml
services/auth-core/examples/: argon2_bench.rs  membership_manifest_vector.rs  refresh_txn_vector.rs  transcript_vector.rs  verify_interop.rs
services/auth-core/src/: breach.rs  crypto.rs  delivery_key.rs  error.rs  ids.rs  lib.rs  membership.rs  memstore.rs  password.rs  request_proof.rs  sender_cert.rs  service.rs  store.rs  transcript.rs  transparency.rs
services/auth-core/tests/: invariants.rs  transparency.rs
(+50 files in other folders)
