[package]
name = "mls-ffi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mls-ffi = { path = ".." }
mls-core = { path = "../../mls-core" }
once_cell = "1"
arbitrary = { version = "1", features = ["derive"] }

# Its own workspace so it is not built by the parent's `cargo test` (needs nightly + libfuzzer).
[workspace]

[[bin]]
name = "envelope"
path = "fuzz_targets/envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "content_decode"
path = "fuzz_targets/content_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secret_state"
path = "fuzz_targets/secret_state.rs"
test = false
doc = false
bench = false
